fix: subid in query param
